fix twitter css author and author @ mis-alignment

--- a/css/templates/twitter.css
+++ b/css/templates/twitter.css
@@ -12,7 +12,6 @@
 
 .survol-twitter-author-container {
     display: flex;
-    align-items: center;
     flex-direction: column;
 }
 
